--- a/work/03_WebpackTest/demo2/package.json
+++ b/work/03_WebpackTest/demo2/package.json
@@ -2,7 +2,9 @@
   "name": "demo2",
   "version": "1.0.0",
   "scripts": {
-    "build": "webpack"
+    "build": "webpack",
+    "server": "serve dist",
+    "dev": "webpack-dev-server"
   },
   "devDependencies": {
     "clean-webpack-plugin": "^0.1.17",
@@ -10,6 +12,11 @@
     "file-loader": "^1.1.5",
     "html-webpack-plugin": "^2.30.1",
     "style-loader": "^0.19.0",
-    "webpack": "^3.8.1"
+    "url-loader": "^0.6.2",
+    "webpack": "^3.8.1",
+    "webpack-dev-server": "^2.9.4"
+  },
+  "dependencies": {
+    "jquery": "^1.11.3"
   }
 }
