--- a/work/02_GulpTest/package.json
+++ b/work/02_GulpTest/package.json
@@ -5,9 +5,12 @@
     "gulp": "^3.9.1",
     "gulp-clean-css": "^3.9.0",
     "gulp-concat": "^2.6.1",
+    "gulp-connect": "^5.0.0",
     "gulp-htmlmin": "^3.0.0",
     "gulp-less": "^3.3.2",
+    "gulp-load-plugins": "^1.5.0",
     "gulp-rename": "^1.2.2",
-    "gulp-uglify": "^3.0.0"
+    "gulp-uglify": "^3.0.0",
+    "open": "0.0.5"
   }
 }
